@@ -41,6 +41,11 @@ magmatic-rounds-magazine=Put everything into the incinerator.
 [entity-name]
 hex-core=Hex Core
 hex-core-loader=Loader
+hexport-nauvis=Hexport (Nauvis)
+hexport-vulcanus=Hexport (Vulcanus)
+hexport-fulgora=Hexport (Fulgora)
+hexport-gleba=Hexport (Gleba)
+hexport-aquilo=Hexport (Aquilo)
 hexic-transport-belt=Hexic transport belt
 hexic-underground-belt=Hexic underground belt
 hexic-splitter=Hexic splitter
@@ -63,6 +68,11 @@ plague-cloud=Plague cloud
 
 [entity-description]
 hex-core=The core of the hex, able to make item trades. Link a belt into the left tunnel. Link a belt out of the right tunnel.
+hexport-nauvis=Requires no power, charges bots, extends the logistic network, provides map visibility, and is toggleable in the hex core, but cannot hold any bots.
+hexport-vulcanus=Requires no power, charges bots, extends the logistic network, provides map visibility, and is toggleable in the hex core, but cannot hold any bots.
+hexport-fulgora=Requires no power, charges bots, extends the logistic network, provides map visibility, and is toggleable in the hex core, but cannot hold any bots.
+hexport-gleba=Requires no power, charges bots, extends the logistic network, provides map visibility, and is toggleable in the hex core, but cannot hold any bots.
+hexport-aquilo=Requires no power, charges bots, extends the logistic network, provides map visibility, and is toggleable in the hex core, but cannot hold any bots.
 disintegrator=A helpful bot for clearing out large swarms of enemies.
 detonator=It doesn't only detonate things. It is also a biological superweapon.
 demolisher=Swiftly decimates everything in its path.
@@ -413,6 +423,7 @@ total-produced=Total Produced
 total-consumed=Total Consumed
 tag-button=Create a map tag for this trade.
 teleport-tooltip=Teleport to this hex core (__CONTROL__teleport-to-hex-core__)\nHotkey works without GUI open.
+toggle-hexport-tooltip=Toggle logistic network coverage, charging, and map visibility.
 unloader-filters-tooltip=Configure the unloader filters.
 sink-mode-tooltip-header=Sink Mode
 sink-mode-tooltip-body=Irreversibly convert these trades to low-efficiency "sell" trades (which produce coins) for each item that is an input to any of these trades.
@@ -623,6 +634,7 @@ multiple-rank-ups=Multiple items can be ranked up while doing this.
 dungeon-location=Dungeons are located far from spawn.
 dungeon-loot-condition=Pick up all chests in a dungeon to loot it.
 first-spidertron=Work from home!
+no-robot-slots=Hexports have no slots for robots.
 
 [quest-title]
 ground-zero=[img=virtual-signal.shape-circle] Ground Zero
@@ -666,6 +678,7 @@ my-hair-feels-funny=[img=virtual-signal.shape-cross] My Hair Feels Funny
 electrocution=[img=virtual-signal.signal-skull] Electrocution
 tesla-freak=[img=virtual-signal.signal-lightning] Tesla Freak
 you-are-the-destroyer=[img=virtual-signal.signal-weapon] YOU are the Destroyer
+lazy-bastard=[img=item.roboport] Lazy Bastard
 electromagnetic-dungeon=[img=virtual-signal.signal-lightning] Electromagnetic Dungeon
 visit-gleba=[planet=gleba] Visit Gleba
 yummy-co=[img=virtual-signal.shape-cross] Yummy Co.
@@ -727,6 +740,7 @@ my-hair-feels-funny=It kind of feels good. Is this why others come here and neve
 electrocution=Lightning safety tips are only written by people who've never been struck. The real experts aren't available for consultation.
 tesla-freak=The number is bigger because there are more of the smaller numbers. It's a better strat because it's a bigger number.
 you-are-the-destroyer=Be one with the zap.
+lazy-bastard=Automating crafting was the easy part.
 electromagnetic-dungeon=The dungeons on this planet boast defenses of extreme voltage.
 visit-gleba=What a beautiful planet!
 yummy-co=Your yumako fruit trading company is coming along well here!
@@ -826,6 +840,7 @@ sink-mode=Sink Mode
 generator-mode=Generator Mode
 trade-loop-finder=Trade Loop Finder
 item-buffs=Item Buffs
+hexports=Hexports
 
 [feature-description]
 catalog=Discover items, rank them up, and receive valuable bonuses!
@@ -839,6 +854,7 @@ sink-mode=Hex cores can now turn their trade outputs directly into coins, but on
 generator-mode=Hex cores can now turn their trade inputs directly into coins, but only for a much higher input cost.
 trade-loop-finder=Automatically searches your base for possible trade loops.
 item-buffs=Empower your items in the Catalog!
+hexports=All hex cores can now charge robots and provide visibility.
 
 [hextorio-debug]
 complete-quest=Complete quest
